--- a/css/media.css
+++ b/css/media.css
@@ -1,145 +1,248 @@
 @media (max-width: 800px) {
-    nav {
-      border-bottom: 1px solid var(--blue);
-    }
-    nav ul {
-      display: flex;
-      justify-content: flex-start;
-      flex-direction: row;
-    }
-    nav li:nth-of-type(1) {
-      margin-left: 20px;
-    }
-    nav li:nth-of-type(2) {
-      padding-top: 70px;
-      margin-left: -106px;
-    }
-    nav li:nth-of-type(3) {
-      padding-top: 72px;
-      margin-left: 20px;
-    }
-    nav li:nth-of-type(4) {
-      margin-left: -90px;
-      padding-top: 18px;
-      font-weight: bolder;
-    }
-    .liBtn{
-        left: -8px;
-        top: -17px;
-        font-size:16px;
-        padding: 16px 9px;
-        margin-right: 8px;
-        margin-bottom:10px;
-        }
-        .liBtn i {  
-           left: -8px;
-           top: -17px;
-        }
-        .descriptionTitle {
-          flex-direction: column;
-        }
-        .lastchild{
-         width:250px;
-        }
-        .hebergementsContainer {
-          flex-direction: column-reverse;
-        }
-        .popularBox img { 
-        width: 65%;
-        min-height:150px;
-        }
-      }
-      
+  nav {
+    border-bottom: 1px solid var(--blue);
+  }
+  nav ul {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+  }
+  nav li:nth-of-type(1) {
+    margin-left: 20px;
+  }
+  nav li:nth-of-type(2) {
+    padding-top: 70px;
+    margin-left: -106px;
+  }
+  nav li:nth-of-type(3) {
+    padding-top: 72px;
+    margin-left: 20px;
+  }
+  nav li:nth-of-type(4) {
+    margin-left: -90px;
+    padding-top: 18px;
+    font-weight: bolder;
+  }
 
+  .liBtn {
+    left: -8px;
+    top: -17px;
+    font-size: 16px;
+    padding: 16px 9px;
+    margin-right: 8px;
+    margin-bottom: 10px;
+  }
+  .liBtn i {
+    left: -8px;
+    top: -17px;
+  }
+  .descriptionTitle {
+    flex-direction: column;
+  }
+  .lastchild {
+    width: 250px;
+  }
+  .hebergementsContainer {
+    flex-direction: column-reverse;
+  }
+  figure{
+   height: auto;
+  padding: 2px;
+   margin-bottom: 10px;
+
+  }
+  .box figure{
+    flex-direction:column;
+  }
+  figure img {
+    width: 100%;
+    height: 120px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+  }
+  .popularBox {
+    margin: 20px 5px;
+    padding: 3px;
+  }
+  .popularBox img {
+    width: 30%;
+    height: 126px;
+  }
+  .startBoxPopular {
+    margin-top: 30px;
+  }
+  .normalsize {
+    padding-top: 0px;
+  }
+  .activitesContainer {
+    flex-direction: column;
+   }
+ 
+  .rowPhoto {
+    flex-direction: column;
+  }
+  .Boxbig {
+    border-radius: 15px;
+    margin: 10px 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+  }
+  
+  .boxSmall {
+    width: 88%;
+    height: auto;
+    margin: 18px;
+    
+  }
+
+  .boxSmall img {
+    width: 100%;
+    
+  }
+  footer {
+    flex-direction: column;
+  }
+}
 
 @media (min-width: 1024px) {
-    nav {
-      width: 100%;
-    }
-    nav ul {
-      display: flex;
-      justify-content: flex-start;
-      flex-direction: row;
-      margin-right: 50px;
-    }
-    nav li:nth-of-type(1) {
-      margin-left: 20px;
-      flex-grow: 1;
-    }
-    nav li:nth-of-type(2) {
-      padding-top: 14px;
-    }
-    nav li:nth-of-type(3) {
-      padding-top: 14px;
-    }
-    nav li:nth-of-type(4) {
-      padding-top: 14px;
-    }
-    .separation {
-        display: none;
-      }
-      
-      .search {
-        width: 17%;
-      }
-      .btn_recherche {
-        width:85px;  
-      }
-      .btnSpanRecherche{
-        display:block;
-      }
-      .searchIcon{
-        display:none;
-      }
-     
+  nav {
+    width: 100%;
+  }
+  nav ul {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    margin-right: 50px;
+  }
+  nav li:nth-of-type(1) {
+    margin-left: 20px;
+    flex-grow: 1;
+  }
+  nav li:nth-of-type(2) {
+    padding-top: 14px;
+  }
+  nav li:nth-of-type(3) {
+    padding-top: 14px;
+  }
+  nav li:nth-of-type(4) {
+    padding-top: 14px;
+  }
+  .separation {
+    display: none;
+  }
+
+  .search {
+    width: 17%;
+  }
+  .btn_recherche {
+    width: 85px;
+  }
+  .btnSpanRecherche {
+    display: block;
+  }
+  .searchIcon {
+    display: none;
+  }
+
+  .descriptionTitle {
+    flex-direction: column;
+  }
+  .filterContainer {
+    margin: 20px 20px;
+    flex-direction: row;
+  }
+  .liBtn {
+    margin-right: 10px;
+    margin-left: 15px;
+    padding: 17px;
+  }
+  .liBtn i {
+    left: -19px;
+    top: -17px;
+    padding: 15px 15px;
+  }
+  .lastchild {
+    width: auto;
+  }
+  .hebergementsContainer {
+    flex-direction: row;
+  }
+  figure{
+    flex-direction:column;
+    height: auto;
+  }
+  figure img {
+  width: 100%;
+  height: 120px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+  article {
+    margin-right: 10px;
+    width: 70%;
+  }
+  aside {
+    margin-left: 10px;
+    width: 25%;
+  }
+  .parent_box {
+    display: flex;
+  }
+  .popularBox {
+    height: auto;
+    width: 96%;
+    margin: 20px 5px;
+    padding: 3px;
+  }
+ .popularBox img {
+    width: 45%;
+    height: 130px;
+  }
+  
+  .startBoxPopular {
+    font-size: 12px;
+    margin-top: 13px;
+  }
+  .normalsize {
+    padding-top: 26px;
+  }
+  .activitesContainer {
+    flex-direction: row;
+  }
+  .rowPhoto {
+    flex-direction:column;
+  }
+  .Boxbig {   
+    margin-right: 20px;
+    padding-bottom: 20px;
+  }
+  .Boxbig img {   
+   height:365px ;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+  .boxSmall {
+    width: 90%;
+    height: auto;
     
-      .descriptionTitle {
-        flex-direction: column;
-      }
-      .filterContainer {
-        margin: 20px 20px;
-        flex-direction:row;
-    }
-      .liBtn{
-        margin-right:10px;
-        margin-left:15px;
-        padding:17px;
-    }
-      .liBtn i {
-        left:-19px;
-        top:-17px;
-        padding:15px 15px;
-    }
-      .lastchild{
-        width:auto;
-       }
-      .hebergementsContainer {
-        flex-direction: row;
-      }
-      article{
-          margin-right:10px;
-          width:70%;
-      }
-      aside{
-        margin-left:10px;
-        width:25%;
-    }
-      .parent_box {
-        display: flex;
-      }
-      .popularBox {
-        height: auto;
-        width: 96%;
-        margin: 20px 5px;
-        padding: 3px;
-      }
-      .popularBox img { 
-        width:45%;
-        height:150px;
-        
-        }
-        .startBoxPopular  {
-            font-size:12px;
-           margin-top:13px;
-          }
+   
+  }
+  
+  .boxSmall img {
+    width: 100%;
+    height: 150px;
+  }
+   .smallBigMargin {
+    margin-top: 40px;
+  }
+  footer {
+    flex-direction: row;
+  }
+  .card:nth-of-type(2) {
+    margin-left: 150px;
+    margin-right: 100px;
+  }
+  .card:nth-of-type(3) {
+    margin-left: 120px;
+  }
 }
