--- a/css/style.css
+++ b/css/style.css
@@ -28,20 +28,15 @@
     font-size: 1rem;
     height:100%;
   }
-  section {  
-  margin:20px 0px;
-   } 
+  
   li {
     list-style-type: none;
   }
- a{
-    color:#000;
- }
- hr{
+  hr{
    color:var(--blue);
  }
  
- nav {
+nav {
   margin-top: 0px;
   padding-top:20px;
   width: 50%;
@@ -49,22 +44,28 @@
 }
 nav a {
   padding: 11px 24px;
+  color:#000;
 }
 nav li a:hover {
   padding-top: 20px;
-  border-top: 1px solid var(--blue);
+  border-top: 1px solid #3240ff;
   transition: all 0.4s;
 }
+
+
 .active {
-  color: var(--blue);
+  color: #3240ff;
 }
 
 .separation{
  display:block;  
  width:85%;
  margin-left:20px;
+ border:1px solid #ccc;
 }
-
+section {  
+  margin:20px 0px;
+ } 
  .descriptionTitle{
   display:flex; 
  margin:20px 20px;
@@ -135,117 +136,281 @@ nav li a:hover {
  .searchIcon{
    display:block;
  }
+
 /*=== Filter Container ===*/
 .filterContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-     margin:20px 20px;
-  }
-  .filterContainer h1{
-  line-height: 3;
-  font-size:1.2rem;
-  }
-  .firtsBtn{
-    display: flex;
-    flex-direction: row;
-  }
-  .liBtn{
-    display:flex;
-    width:172px;
-    height:50px;
-    font-size: 15px;
-    font-weight:bolder;
-    border-radius: 25px;
-    border:1px solid #ccc;
-    cursor: pointer;
-  }
-  .liBtn i {
-   position: relative;
-    left: -1px;
-    top: -20px;
-    font-size: large;
-    color: #0065fc;
-    background-color: var(--lightBlue);
-    border-radius: 50%;
-    width: 50px;
-    height: 47px;
-    padding: 15px 11px;
-    margin-right: 0px;
-  }
-  .liBtn:hover{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+   margin:20px 20px;
+}
+.filterContainer h1{
+line-height: 3;
+font-size:1.2rem;
+}
+.firtsBtn{
+  display: flex;
+  flex-direction: row;
+}
+.liBtn{
+  display:flex;
+  width:172px;
+  height:50px;
+  font-size: 15px;
+  font-weight:bolder;
+  border-radius: 25px;
+  border:1px solid #ccc;
+  cursor: pointer;
+}
+.liBtn i {
+ position: relative;
+  left: -1px;
+  top: -20px;
+  font-size: large;
+  color: #0065fc;
+  background-color: var(--lightBlue);
+  border-radius: 50%;
+  width: 50px;
+  height: 47px;
+  padding: 15px 11px;
+  margin-right: 0px;
+}
+.liBtn:hover{
+background-color:var(--lightBlue);
+transition: all 0.4s;
+}
+#btnFilter1 {
+  width: 185px;
+}
+#btnFilter2 {
+  width: 130px;
+}
+
+
+.liContainerBtn {
+  position: relative;
+  margin-top:10px;
+  
+}
+.liContainerBtn i {
+  position: absolute;
+  left: 4px;
+  top: 1px;
+  font-size: large;
+  color: #0065fc;
+  background-color: var(--lightBlue);
+  border-radius: 50%;
+  width: 50px;
+  height: 47px;
+  padding: 15px 15px;
+  margin-right: 10px;
+}
+.btnFilter {
+  height: 50px;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  background-color: transparent;
+  font-size: 1.1em;
+  text-align: center;
+  margin-left: 5px;
+  cursor: pointer;
+}
+.btnFilter:hover{
+  color: #0065fc;
+  background-color: #deebff;
+}
+
+#btnFilter3 {
+  width: 196px;
+}
+#btnFilter4 {
+  width: 250px;
+}
+
+.information{
+ display:flex; 
+  margin-left:20px;
+  width:92%;
+}
+ /* Info section three */
+ .disponible {
+  display: flex;
+  line-height: normal;
+  width: 95%;
+  font-size: 15px;
+}
+.round-btn {
+  background-color: #fff;
+  width: 30px;
+  height: 30px;
+  padding: 3px 12.5px;
+  font-size: 1rem;
+  margin-right: 10px;
+  border-radius: 50%;
+  color: #0065fc;
+  border: 1px solid #ccc;
+  margin-top:-2px;
+}
+.hebergementsContainer {
+  display: flex; 
+  justify-content: center; 
+  
+}
+
+article {
+  width: 100%;
+  height: auto;
+   background-color:var(--lightBlue);
+  justify-content: center;
+  padding-bottom:20px; 
+}
+.imageTitle{
+    margin-left:26px;
+    padding-top: 20px;
+
+}
+aside {
+  padding-top: 20px;
+  width: 100%;
   background-color:var(--lightBlue);
-  transition: all 0.4s;
-  }
-  #btnFilter1 {
-    width: 185px;
-  }
-  #btnFilter2 {
-    width: 130px;
-  }
-  
-  
-  .liContainerBtn {
-    position: relative;
-    margin-top:10px;
-    
-  }
-  .liContainerBtn i {
-    position: absolute;
-    left: 4px;
-    top: 1px;
-    font-size: large;
-    color: #0065fc;
-    background-color: var(--lightBlue);
-    border-radius: 50%;
-    width: 50px;
-    height: 47px;
-    padding: 15px 15px;
-    margin-right: 10px;
-  }
-  .btnFilter {
-    height: 50px;
-    border: 1px solid #ccc;
-    border-radius: 30px;
-    background-color: transparent;
-    font-size: 1.1em;
-    text-align: center;
-    margin-left: 5px;
-    cursor: pointer;
-  }
-  .btnFilter:hover{
-    color: #0065fc;
-    background-color: #deebff;
-  }
-  
-  #btnFilter3 {
-    width: 196px;
-  }
-  #btnFilter4 {
-    width: 250px;
-  }
-  
-  .information{
-   display:flex; 
-    margin-left:20px;
-    width:92%;
-  }
-   /* Info section three */
-   .disponible {
-    display: flex;
-    line-height: normal;
-    width: 95%;
-    font-size: 15px;
-  }
-  .round-btn {
-    background-color: #fff;
-    width: 30px;
-    height: 30px;
-    padding: 3px 12.5px;
-    font-size: 1rem;
-    margin-right: 10px;
-    border-radius: 50%;
-    color: #0065fc;
-    border: 1px solid #ccc;
-    margin-top:-2px;
-  }
+}
+.box {
+  width: 100%;
+  height: auto;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 2px 3px rgba(204, 204, 204, 0.561);
+  margin:10px 5px ; 
+  cursor: pointer;  
+}
+.box:hover{
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
+  0 2px 2px rgba(0,0,0,0.1), 
+  0 4px 4px rgba(0,0,0,0.1), 
+  0 8px 8px rgba(0,0,0,0.1),
+  0 16px 16px rgba(0,0,0,0.1);
+ 
+}
+.parent_box{ 
+  margin:20px 20px; 
+}
+figure {
+   background-color: #fff;
+  border-radius: 15px;
+  display:flex;
+}
+ figcaption {
+  margin-left: 10px;
+  line-height: 1.5; 
+}
+figcaption h3 {
+ font-size:0.9rem;
+}
+.startBox {
+   display:flex;
+  font-size: 12px;
+  padding-top: 5px;
+  color:var(--blue)
+}
+.popularContainer {
+  margin-left: 0px;
+  height: auto;
+  padding: 20px 0px;
+}
+
+.popularContainer h2 {
+  margin-left: 13px;
+  font-size: 1.5rem;
+}
+.chart{
+ float:right;
+ margin-right:23px;
+}
+
+.popularBox figure{
+  display: flex; 
+  flex-direction:row;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 5px 5px rgba(204, 204, 204, 0.561);
+}
+.popularBox img { 
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-top-right-radius: 0px;
+}
+.popularBox figcaption {
+   line-height: 1.5;
+  font-size: 1rem;
+ }
+.startBoxPopular  {
+  display: flex;
+  color:var(--blue);
+  font-size:12px; 
+}
+.unCheckStart i {
+  color: #ccc;
+}
+.textLeft{
+ margin-left: 10px;
+ padding:10px;
+ font-weight: bold;
+
+}
+/*===activitesContainer==*/
+.activitesContainer{
+ display:flex;
+ 
+}
+.rowPhoto{
+  display:flex; 
+}
+.Boxbig{
+ background-color:#fff;
+  border-radius: 15px;
+  border: 1px solid #ccc;
+  height:auto;
+ }
+ .Boxbig figure{
+   display:flex;
+   flex-direction:column;
+ }
+ .Boxbig h3 {        
+  margin-left: 20px;
+ 
+}
+ .Boxbig img{
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.boxSmall{
+  border-radius: 15px;
+  background-color:#fff;
+  border:1px solid #ccc;
+ 
+}
+.boxSmall figure{
+  display:flex;
+  flex-direction:column;
+}
+.boxSmall h4 {        
+  margin-left: 20px;
+  padding-top:5px;
+}
+.boxSmall img{
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+
+/*===Footer ===*/
+footer {
+  display: flex;
+  margin:20px 20px;
+}
+.card {  
+  padding: 1rem;
+  line-height: 2;
+  margin-left: 15px;
+}
+ 
