--- a/css/media.css
+++ b/css/media.css
@@ -208,6 +208,8 @@
   }
   .activitesContainer {
     flex-direction: row;
+    margin:20px 20px;
+    justify-content:center;
   }
   .rowPhoto {
     flex-direction:column;
