--- a/css/media.css
+++ b/css/media.css
@@ -114,23 +114,21 @@
     flex-direction: row;
     margin-right: 50px;
   }
+  nav li{
+    padding-top: 14px;
+  }
   nav li:nth-of-type(1) {
     margin-left: 20px;
     flex-grow: 1;
-  }
-  nav li:nth-of-type(2) {
-    padding-top: 14px;
-  }
-  nav li:nth-of-type(3) {
-    padding-top: 14px;
-  }
+   }
+  
   nav li:nth-of-type(4) {
-    padding-top: 14px;
+    font-weight: bolder;
   }
   .separation {
     display: none;
   }
-
+/**/
   .search {
     width: 17%;
   }
@@ -147,6 +145,7 @@
   .descriptionTitle {
     flex-direction: column;
   }
+  /**/
   .filterContainer {
     margin: 20px 20px;
     flex-direction: row;
@@ -164,6 +163,7 @@
   .lastchild {
     width: auto;
   }
+  /**/
   .hebergementsContainer {
     flex-direction: row;
   }
@@ -188,6 +188,7 @@
   .parent_box {
     display: flex;
   }
+  /**/
   .popularBox {
     height: auto;
     width: 96%;
@@ -206,6 +207,7 @@
   .normalsize {
     padding-top: 26px;
   }
+  /***/
   .activitesContainer {
     flex-direction: row;
     margin:20px 20px;
@@ -225,9 +227,7 @@
   }
   .boxSmall {
     width: 90%;
-    height: auto;
-    
-   
+    height: auto;   
   }
   
   .boxSmall img {
@@ -237,6 +237,7 @@
    .smallBigMargin {
     margin-top: 40px;
   }
+  /**/
   footer {
     flex-direction: row;
   }
