--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,148 @@
+@media (max-width: 768px) {
+  /*body {
+    background-color: rgba(0, 0, 255, 0.418);
+  }*/
+  nav {
+    width: 100%;
+  }
+  nav ul {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    margin-right: 50px;
+  }
+  nav li {
+    padding-top: 14px;
+  }
+  nav li:nth-of-type(1) {
+    margin-left: 20px;
+    flex-grow: 1;
+  }
+
+  nav li:nth-of-type(4) {
+    font-weight: bolder;
+  }
+  .boxbig {
+    width: 88%;
+    height: auto;
+    margin: 18px;
+}
+  .box {
+    width: 90%;
+    height: auto;
+    cursor: pointer;
+  }
+}
+
+@media (max-width: 600px) {
+  
+}
+@media (min-width: 800px) {
+ 
+  nav {
+    width: 100%;
+  }
+  nav ul {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    margin-right: 50px;
+  }
+  nav li {
+    padding-top: 14px;
+  }
+  nav li:nth-of-type(1) {
+    margin-left: 20px;
+    flex-grow: 1;
+  }
+
+  nav li:nth-of-type(4) {
+    font-weight: bolder;
+  }
+  .descriptionTitle {
+    flex-direction: column;
+  }
+  .search {
+    width: 40%;
+  }
+  .filterContainer {
+    flex-direction: row;
+  }
+  .liBtn {
+    margin-right: 5px;
+    margin-left: 10px;
+    padding: 15px;
+  }
+  .liBtn i {
+    left: -17px;
+    top: -15px;
+    padding: 15px 17px;
+  }
+
+  .hebergementsContainer {
+    flex-direction: row;
+  }
+  
+  figure {
+    height: auto;
+    padding: 2px;
+    margin-bottom: 10px;
+  }
+  .box figure {
+    flex-direction: column;
+  }
+  figure img {
+    width: 70%;
+    height: 120px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+  }  
+  .popularBox {
+    width:50%;
+    margin: 20px 5px;
+   
+  }
+  
+  .popularBox img {
+    width: 30%;
+    height: 126px;
+  }
+  .popularContainer h2 {
+    margin-left: 5px;
+    font-size: 1rem;
+  }
+  .startBoxPopular {
+    margin-top: 30px;
+  }
+  
+  .activitesContainer {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .rowPhoto {
+    flex-direction: column;
+    justify-content: baseline;
+  }
+  .Boxbig {
+    width:50%;
+    border-radius: 15px;
+    margin: 10px auto;
+    background-color: #fff;
+    border: 1px solid #ccc;
+  }
+
+  .boxSmall {
+    width: 50%;
+    height: auto;
+    margin: 18px;
+  }
+
+  .boxSmall img {
+    width: 100%;
+  }
+}
+
 @media (max-width: 800px) {
   nav {
     border-bottom: 1px solid var(--blue);
@@ -45,14 +190,13 @@
   .hebergementsContainer {
     flex-direction: column-reverse;
   }
-  figure{
-   height: auto;
-  padding: 2px;
-   margin-bottom: 10px;
-
+  figure {
+    height: auto;
+    padding: 2px;
+    margin-bottom: 10px;
   }
-  .box figure{
-    flex-direction:column;
+  .box figure {
+    flex-direction: column;
   }
   figure img {
     width: 100%;
@@ -76,8 +220,8 @@
   }
   .activitesContainer {
     flex-direction: column;
-   }
- 
+  }
+
   .rowPhoto {
     flex-direction: column;
   }
@@ -87,17 +231,15 @@
     background-color: #fff;
     border: 1px solid #ccc;
   }
-  
+
   .boxSmall {
     width: 88%;
     height: auto;
     margin: 18px;
-    
   }
 
   .boxSmall img {
     width: 100%;
-    
   }
   footer {
     flex-direction: column;
@@ -114,21 +256,21 @@
     flex-direction: row;
     margin-right: 50px;
   }
-  nav li{
+  nav li {
     padding-top: 14px;
   }
   nav li:nth-of-type(1) {
     margin-left: 20px;
     flex-grow: 1;
-   }
-  
+  }
+
   nav li:nth-of-type(4) {
     font-weight: bolder;
   }
   .separation {
     display: none;
   }
-/**/
+  /**/
   .search {
     width: 17%;
   }
@@ -167,16 +309,20 @@
   .hebergementsContainer {
     flex-direction: row;
   }
-  figure{
-    flex-direction:column;
+  .box {
+    margin: 10px 20px;
+    padding-bottom: 5px;
+  }
+  figure {
+    flex-direction: column;
     height: auto;
   }
   figure img {
-  width: 100%;
-  height: 120px;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
-}
+    width: 100%;
+    height: 120px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+  }
   article {
     margin-right: 10px;
     width: 70%;
@@ -193,48 +339,71 @@
     height: auto;
     width: 96%;
     margin: 20px 5px;
-    padding: 3px;
+   
   }
- .popularBox img {
+
+  .popularBox img {
     width: 45%;
     height: 130px;
   }
-  
+  .popularContainer h2 {
+    margin-left: 5px;
+    font-size: 1.2rem;
+  }
   .startBoxPopular {
     font-size: 12px;
-    margin-top: 13px;
+    padding-top: 26px;
+    margin-top: 30px;
   }
   .normalsize {
-    padding-top: 26px;
+    margin-top: 10px;
   }
   /***/
   .activitesContainer {
     flex-direction: row;
-    margin:20px 20px;
-    justify-content:center;
+    margin: 20px 20px;
+    justify-content: center;
   }
   .rowPhoto {
-    flex-direction:column;
+    flex-direction: column;
   }
-  .Boxbig {   
+  .Boxbig {
     margin-right: 20px;
     padding-bottom: 20px;
   }
-  .Boxbig img {   
-   height:365px ;
+  .Boxbig img {
+    height: 362px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
   }
   .boxSmall {
     width: 90%;
-    height: auto;   
+    height: auto;
   }
-  
+
   .boxSmall img {
     width: 100%;
     height: 150px;
   }
-   .smallBigMargin {
+  #FortdePomegues img {
+    height: 200px;
+  }
+  #ileDuFriout {
+    position: relative;
+    z-index: -1;
+    margin-top: 40px;
+    margin-right: 20px;
+    padding-bottom: 15px;
+    box-shadow: 1px 2px rgba(204, 204, 204, 0.561);
+  }
+  #ileDuFriout img {
+    height: 90px;
+  }
+  #ileDuFriout figcaption {
+    z-index: 4;
+    top: 100 !important;
+  }
+  .smallBigMargin {
     margin-top: 40px;
   }
   /**/
