--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@
     font-family: "Raleway", sans-serif;
   }
   body {
-    background-color: var(--bgColor);
     font-size: 16px;
     font-size: 1rem;
     height:100%;
@@ -257,17 +256,16 @@ transition: all 0.4s;
   
 }
 
-/*article {
+article {
   width: 100%;
   height: auto;
    background-color:var(--lightBlue);
   justify-content: center;
   padding-bottom:20px; 
-}*/
+}
 .imageTitle{
     margin-left:26px;
     padding-top: 20px;
-
 }
 aside {
   padding-top: 20px;
@@ -280,7 +278,6 @@ aside {
   background-color: #fff;
   border-radius: 15px;
   box-shadow: 2px 3px rgba(204, 204, 204, 0.561);
-  margin:10px 5px ; 
   cursor: pointer;  
 }
 .box:hover{
@@ -326,13 +323,23 @@ figcaption h3 {
  float:right;
  margin-right:23px;
 }
-
+.popularBox{
+  box-shadow: 1px 2px rgba(204, 204, 204, 0.561);
+  border-radius: 15px;
+}
+.popularBox:hover{
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
+  0 2px 2px rgba(0,0,0,0.1), 
+  0 4px 4px rgba(0,0,0,0.1), 
+  0 8px 8px rgba(0,0,0,0.1),
+  0 16px 16px rgba(0,0,0,0.1);  
+}
 .popularBox figure{
   display: flex; 
   flex-direction:row;
   background-color: #fff;
   border-radius: 15px;
-  box-shadow: 5px 5px rgba(204, 204, 204, 0.561);
+ 
 }
 .popularBox img { 
   border-top-left-radius: 15px;
@@ -370,6 +377,14 @@ figcaption h3 {
   border-radius: 15px;
   border: 1px solid #ccc;
   height:auto;
+  box-shadow: 1px 2px rgba(204, 204, 204, 0.561);
+ }
+ .Boxbig:hover{
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
+  0 2px 2px rgba(0,0,0,0.1), 
+  0 4px 4px rgba(0,0,0,0.1), 
+  0 8px 8px rgba(0,0,0,0.1),
+  0 16px 16px rgba(0,0,0,0.1);
  }
  .Boxbig figure{
    display:flex;
@@ -387,8 +402,16 @@ figcaption h3 {
   border-radius: 15px;
   background-color:#fff;
   border:1px solid #ccc;
+  box-shadow: 1px 2px rgba(204, 204, 204, 0.561);
  
 }
+.boxSmall:hover{
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
+  0 2px 2px rgba(0,0,0,0.1), 
+  0 4px 4px rgba(0,0,0,0.1), 
+  0 8px 8px rgba(0,0,0,0.1),
+  0 16px 16px rgba(0,0,0,0.1);
+ }
 .boxSmall figure{
   display:flex;
   flex-direction:column;
