--- a/css/media.css
+++ b/css/media.css
@@ -108,9 +108,34 @@ figure img {
 footer {
   flex-direction: column;
 }
-@media (min-width:768px) {
-    body {
-        background-color: rgba(211, 209, 100, 0.301);
+@media (width:768px) {
+ body{
+   background-color:#ccc;
+ }
+      nav {
+        border: none;
+      }
+      nav ul {
+        justify-content: flex-start;
+        flex-direction: row;
+        margin-right: 50px;
+      }
+      nav li {
+        padding-top: 14px;
+      }
+      nav li:nth-of-type(1) {
+        margin-left: 20px;
+        flex-grow: 1;
+      }
+      nav li:nth-of-type(2) {
+        padding-top: 32px;
+      }
+      nav li:nth-of-type(3) {
+        padding-top: 32px;
+      }
+      nav li:nth-of-type(4) {
+        font-weight: bolder;
+        margin-left: 0px;
       }
       .search {
         width: 38%;
@@ -122,12 +147,16 @@ footer {
      .box{
         margin:0 10px;
      }
+     .popularBox img {
+      width: 45%;
+     
+    }
       .popularBox figure {
           width:82%;
           margin:0 auto;
       }
       .activitesContainer {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         margin: 0px 2px;
     }
@@ -151,17 +180,18 @@ footer {
       .FortdePomegues{
           margin-top:40px;
       }
-      .Boxbig{
-        margin-right:10px;
+      .Boxbig img{
+        justify-content:center;
        }
       .rowPhoto {
           margin-right:10px;
+          width:50%;
       }
       footer {
-        flex-direction: row;
+       flex-direction: row;
     }
 }
-@media  (min-width: 800px) {
+@media  (max-width: 800px) {
     .popularContainer h2 {
         margin-left: 13px;
        
@@ -276,7 +306,8 @@ footer {
   }
   .rowPhoto {
     flex-direction: column;
-    margin-top:-10px;
+    margin-top:18px;
+    margin-right:0px;
   }
   .boxSmall {
     width: 90%;
