--- a/css/media.css
+++ b/css/media.css
@@ -1,7 +1,6 @@
 header {
   width: 50%;
-  border-bottom: 1px solid #ccc;
-}
+ }
 nav {
   border-bottom: 1px solid var(--blue);
 }
@@ -109,10 +108,10 @@ footer {
   flex-direction: column;
 }
 @media (width:768px) {
- body{
-   background-color:#ccc;
- }
-      nav {
+  header{
+    width:100%;
+  }
+     nav {
         border: none;
       }
       nav ul {
@@ -129,6 +128,7 @@ footer {
       }
       nav li:nth-of-type(2) {
         padding-top: 32px;
+        margin-left:100px;
       }
       nav li:nth-of-type(3) {
         padding-top: 32px;
@@ -167,6 +167,8 @@ footer {
     
     .Boxbig img {
         height:302px;
+        width: 92%;
+        justify-content:center;
     }
     .smallBigMargin {
         margin-top: 37px;
@@ -180,9 +182,7 @@ footer {
       .FortdePomegues{
           margin-top:40px;
       }
-      .Boxbig img{
-        justify-content:center;
-       }
+      
       .rowPhoto {
           margin-right:10px;
           width:50%;
@@ -233,6 +233,9 @@ footer {
   nav li:nth-of-type(4) {
     font-weight: bolder;
     margin-left: 0px;
+  }
+  .separation{
+    display:none;
   }
   /*Search Section*/
   .search {
@@ -329,7 +332,7 @@ footer {
     z-index: -1;
     margin-right: 13px;   
     box-shadow: 1px 2px rgba(204, 204, 204, 0.561);
-    top:58px;
+    top:68px;
   }
   #ileDuFriout {
     margin-top:27px;
