--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,13 @@ nav a {
 }
 nav li a:hover {
   padding-top: 20px;
-  border-top: 1px solid #3240ff;
+  border-top: 1px solid var(--blue);
   transition: all 0.4s;
 }
 
 
 .active {
-  color: #3240ff;
+  color: var(--blue);
 }
 
 .separation{
@@ -73,6 +73,8 @@ section {
 
 .descriptionTitle h1{
   padding-bottom:10px;
+  font-size: 1rem;
+
   
 }
 /*Search Input*/
@@ -114,7 +116,7 @@ section {
     height: 51px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: #0065fc;
+    background-color: var(--blue);
     color: white;
     font-size: 15px;
     font-weight: 700;
@@ -123,9 +125,9 @@ section {
 
 .btn_recherche:hover 
 {
-    color: #0065fc;
+    color: var(--blue);
     background-color: #deebff;
-    border: 1px solid #0065fc;
+    border: 1px solid var(--blue);
     cursor: pointer;
 }
 
@@ -166,7 +168,7 @@ font-size:1.2rem;
   left: -1px;
   top: -20px;
   font-size: large;
-  color: #0065fc;
+  color: var(--blue);
   background-color: var(--lightBlue);
   border-radius: 50%;
   width: 50px;
@@ -175,7 +177,9 @@ font-size:1.2rem;
   margin-right: 0px;
 }
 .liBtn:hover{
-background-color:var(--lightBlue);
+background-color:var(--blue);
+font-weight:bolder;
+color:#fff;
 transition: all 0.4s;
 }
 #btnFilter1 {
@@ -196,7 +200,7 @@ transition: all 0.4s;
   left: 4px;
   top: 1px;
   font-size: large;
-  color: #0065fc;
+  color:var(--blue);
   background-color: var(--lightBlue);
   border-radius: 50%;
   width: 50px;
@@ -215,7 +219,7 @@ transition: all 0.4s;
   cursor: pointer;
 }
 .btnFilter:hover{
-  color: #0065fc;
+  color: var(--blue);
   background-color: #deebff;
 }
 
@@ -246,7 +250,7 @@ transition: all 0.4s;
   font-size: 1rem;
   margin-right: 10px;
   border-radius: 50%;
-  color: #0065fc;
+  color: var(--blue);
   border: 1px solid #ccc;
   margin-top:-2px;
 } 
@@ -268,6 +272,9 @@ article {
 .imageTitle{
     margin-left:26px;
     padding-top: 20px;
+}
+.imageTitle h2{
+  font-size: 1.3rem;
 }
 aside {
   padding-top: 20px;
@@ -315,6 +322,9 @@ figcaption h3 {
 .popularContainer {
   margin: 0 auto;
   height: auto;
+  }
+  .popularContainer h2{
+    font-size: 1.5rem;
   }
   .popularTitle i{
  margin-left:20px;
