supprimer les images inutilisable

--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,11 @@ font-weight:bolder;
 color:#fff;
 transition: all 0.4s;
 }
+.liBtn i:hover{
+background-color:green;
+color:#fff;
+}
+
 #btnFilter1 {
   width: 185px;
 }
@@ -425,6 +430,13 @@ figcaption h3 {
   0 8px 8px rgba(0,0,0,0.1),
   0 16px 16px rgba(0,0,0,0.1);
  }
+ #ileDuFriout:hover{
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
+  0 2px 2px rgba(0,0,0,0.1), 
+  0 4px 4px rgba(0,0,0,0.1), 
+  0 8px 8px rgba(0,0,0,0.1),
+  0 16px 16px rgba(0,0,0,0.1);
+ }
 .boxSmall figure{
   display:flex;
   flex-direction:column;
@@ -437,13 +449,7 @@ figcaption h3 {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
-#ileDuFriout:hover{
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
-  0 2px 2px rgba(0,0,0,0.1), 
-  0 4px 4px rgba(0,0,0,0.1), 
-  0 8px 8px rgba(0,0,0,0.1),
-  0 16px 16px rgba(0,0,0,0.1);
- }
+
 
 
 /*===Footer ===*/
