--- a/css/media.css
+++ b/css/media.css
@@ -85,9 +85,7 @@ figure img {
 }
 
 .rowPhoto {
-  flex-direction: column;
-  margin-right: 17px;
-  
+  flex-direction: column;  
 }
 .Boxbig {
   border-radius: 15px;
@@ -103,6 +101,12 @@ figure img {
 
 .boxSmall img {
   width: 100%;
+}
+.boxSmall #activity_6{
+  background-image: url("../images/compress/activity/6.jpg"); 
+  background-size:cover;
+  width:100%;
+  height:120px;   
 }
 footer {
   flex-direction: column;
@@ -158,7 +162,7 @@ footer {
       .activitesContainer {
         flex-direction: column;
         align-items: center;
-        margin: 0px 2px;
+        margin: 10px auto;
     }
     figure {
       padding: 0;
@@ -167,9 +171,10 @@ footer {
     
     .Boxbig img {
         height:302px;
-        width: 92%;
+        width: 100%;
         justify-content:center;
     }
+    
     .smallBigMargin {
         margin-top: 37px;
     }
@@ -179,6 +184,7 @@ footer {
     #ileDuFriout img {
         height: 100px;
       }
+      
       .FortdePomegues{
           margin-top:40px;
       }
@@ -203,6 +209,11 @@ footer {
         width: 100%;
         
     }
+    #lastSmall {
+      position: relative;
+      top: 29px;
+  }
+    
 }
 @media (min-width: 1024px){  
   header {
@@ -254,6 +265,12 @@ footer {
   .descriptionTitle {
     flex-direction: column;
   }
+  .descriptionTitle h1 {
+      font-size: 1.5rem;
+}
+.imageTitle h2 {
+  font-size: 1.5rem;
+}
   /* Filter Section*/
   .filterContainer {
     margin: 40px 20px;
@@ -331,7 +348,6 @@ footer {
     position: relative;
     z-index: -1;
     margin-right: 13px;   
-    box-shadow: 1px 2px rgba(204, 204, 204, 0.561);
     top:68px;
   }
   #ileDuFriout {
@@ -342,11 +358,18 @@ footer {
   }
   #ileDuFriout figcaption {
     z-index: 4;
-    top: 100 !important;
+    top: 100px !important;
   }
+ /* #ileDuFriout:hover{
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
+    0 2px 2px rgba(0,0,0,0.1), 
+    0 4px 4px rgba(0,0,0,0.1), 
+    0 8px 8px rgba(0,0,0,0.1),
+    0 16px 16px rgba(0,0,0,0.1);
+   }*/
   #lastSmall{
     position: relative;
-      top:32px;
+    top:27px;
   }
   footer {
     flex-direction: row;
