review the template and images size

--- a/css/media.css
+++ b/css/media.css
@@ -1,16 +1,14 @@
 header {
-  width: 50%;
+  width: 100%;
  }
-nav {
-  border-bottom: 1px solid var(--blue);
-}
+
 nav ul {
   display: flex;
-  justify-content: flex-start;
-  flex-direction: row;
-}
-nav li:nth-of-type(1) {
   margin-left: 20px;
+}
+
+nav ul li:nth-of-type(1) {
+  flex-grow: 3;
 }
 nav li:nth-of-type(2) {
   padding-top: 70px;
@@ -18,10 +16,10 @@ nav li:nth-of-type(2) {
 }
 nav li:nth-of-type(3) {
   padding-top: 72px;
-  margin-left: 35px;
+  margin-left: 20px;
 }
 nav li:nth-of-type(4) {
-  margin-left: -106px;
+  margin-left: -76px;
     padding-top: 13px;
     font-weight: bolder;
 }
@@ -29,29 +27,27 @@ nav li:nth-of-type(4) {
 .liBtn {
   left: -8px;
   top: -17px;
-  font-size: 12px;
-  padding: 16px 9px;
-  margin-right: 8px;
+  line-height: 1;
+  padding: 16px 13px;
+  margin-right: 20px;
   margin-bottom: 10px;
 }
 .liBtn i {
-  left: -8px;
-  top: -17px;
+  left: -13px;
+  top: -16px;
 }
 .descriptionTitle {
   flex-direction: column;
 }
 .lastchild {
-  width: 250px;
+  width: 231px;
 }
 .hebergementsContainer {
   flex-direction: column-reverse;
 }
 figure {
   height: auto;
-  padding: 2px;
-  margin-bottom: 10px;
-}
+ }
 .box figure {
   flex-direction: column;
 }
@@ -65,15 +61,12 @@ figure img {
   margin: 20px 5px;
 }
 .popularBox img {
-  width: 30%;
-  height: 126px;
+  width: 49%;
+  height: 105px;
 }
-.startBoxPopular {
-  margin-top: 52px;
-}
-#startSecond{
-    margin-top:30px !important;
-}
+.chart{
+  margin-left:80px;
+  }
 .popularBox.startBoxPopular:nth-of-type(1){
     padding-top:30px;
 }
@@ -83,7 +76,9 @@ figure img {
 .activitesContainer {
   flex-direction: column;
 }
-
+.separationDiv {
+  flex-direction:column;
+}
 .rowPhoto {
   flex-direction: column;  
 }
@@ -121,6 +116,11 @@ footer {
       nav li {
         padding-top: 14px;
       }
+      nav li a:hover {
+        padding-bottom: 20px;
+        border-bottom: 1px solid var(--blue);
+        transition: all 0.4s;
+      }
       nav li:nth-of-type(1) {
         margin-left: 20px;
         flex-grow: 1;
@@ -140,21 +140,32 @@ footer {
       .search {
         width: 38%;
     }
+    
      .parent_box{
          display:flex;
          flex-direction:row;
+         justify-content: center;
+         margin:20px auto; 
      }
      .box{
         margin:0 10px;
      }
+     .popularBox {
+      margin: 20px auto;
+      width: 56%;
+      
+    }
      .popularBox img {
-      width: 45%;
+      width: 65%;
      
     }
       .popularBox figure {
           width:82%;
           margin:0 auto;
       }
+      .chart {
+        margin-left: 45%;
+    }
       .activitesContainer {
         flex-direction: column;
         align-items: center;
@@ -164,6 +175,13 @@ footer {
       padding: 0;
       margin-bottom:0px;
     }
+    .separationDiv {
+      flex-direction:row;
+  }
+  .Boxbig {
+    width:70%;
+    margin-right: 25px;
+  }
     
     .Boxbig img {
         height:302px;
@@ -174,9 +192,11 @@ footer {
     .smallBigMargin {
         margin-top: 37px;
     }
-    #DuFriout{
-        height:150px;
-    }
+    
+    #DuFriout {
+        top:68px; 
+        margin-top:20px;       
+      }
     #DuFriout img {
         height: 100px;
       }
@@ -189,25 +209,59 @@ footer {
           margin-right:10px;
           width:50%;
       }
+
       footer {
        flex-direction: row;
     }
+    .card:nth-of-type(2) {
+      margin-left: 120px;
+      }
+    .card:nth-of-type(3) {
+      margin-left: 72px;
+    }
 }
-@media  (max-width: 800px) {
-    .popularContainer h2 {
-        margin-left: 13px;
-       
-    }
-    .startBoxPopular {
-        margin-top: 18px;
-    }
-    .popularBox figure {
-        width: 98%;
-        
-    }
-    #lastSmall {
+@media  (min-width: 800px) {
+  nav li:nth-of-type(1) {
+    flex-grow: 1;
+ }
+ nav li:nth-of-type(2) {
+   padding-top: 32px;
+ }
+ nav li:nth-of-type(3) {
+   padding-top: 32px;
+ }
+ nav li:nth-of-type(4) {
+   font-weight: bolder;
+   margin-left: 0px;
+   padding-top: 31px;
+ }
+ .imageTitle{
+  font-size:1.3rem;
+ }
+ 
+ .popularBox figure {
+   width: 98%;
+  }
+ #lastSmall {
       position: relative;
       top: 29px;
+  }
+  .popularContainer h2{
+    font-size:1.4rem;
+  }
+  .chart {
+    margin-left: 74%;
+}
+.separationDiv{
+  flex-direction: column;
+}
+.Boxbig {
+  width:50%;
+}
+#DuFriout {
+  position: relative;  
+   top:68px; 
+   margin-top:27px
   }
     
 }
@@ -227,9 +281,13 @@ footer {
   nav li {
     padding-top: 14px;
   }
+  nav li a:hover {
+    padding-top: 20px;
+    border-top: 1px solid var(--blue);
+    transition: all 0.4s;
+  }
   nav li:nth-of-type(1) {
-    margin-left: 20px;
-    flex-grow: 1;
+     flex-grow: 1;
   }
   nav li:nth-of-type(2) {
     padding-top: 32px;
@@ -242,15 +300,16 @@ footer {
     margin-left: 0px;
     padding-top: 31px;
   }
-  .separation{
-    display:none;
-  }
+  
   /*Search Section*/
   .search {
     width: 17%;
   }
   .btn_recherche {
-    width: 85px;
+    width: 120px;
+    font-size:18px;
+    border-top-left-radius:0px;
+    border-bottom-left-radius:0px;
   }
   .btnSpanRecherche {
     display: block;
@@ -273,6 +332,10 @@ footer {
     margin: 40px 20px;
     flex-direction: row;
   }
+  .filterContainer h2{
+    line-height: 3;
+    margin-right:20px;
+  }
   .liBtn {
     margin-right: 10px;
     margin-left: 15px;
@@ -292,56 +355,93 @@ footer {
     flex-direction: row;
   }
   article {
-    margin-right: 10px;
-    width: 70%;
+    width: 68%;
+    border-radius: 25px;
+    margin-left:20px;
+   
   }
-  aside {
-    margin-left: 10px;
-    width: 25%;
+  aside {   
+    width: 28%;
+    border-radius:20px;    
   }
+ .popularContainer{
+   padding:20px;
+ }
+  .popularBox img{
+   height:120px;
+  }
+  .startBoxPopular {
+    margin-top: 35px;
+  }
+  .chart{
+    margin-left:10%;
+    }
   .parent_box {
     display: flex;
     justify-content: center;
+    padding-right:10px;
+    margin-top: 10px;
   }
   .box {
-    margin: 10px 20px;
-    padding-bottom: 5px;
+   
+    margin:10px 13px;
+    padding: 5px;
   }
+  
 /***/
 .activitesContainer {
     flex-direction: row;
-    margin: 20px 20px;
-    justify-content: center;
+    margin-bottom: 20px;
+   }
+  .separationDiv{
+    flex-direction: row; 
+    width: 50%;  
+  }
+  #secondSeparation{
+    margin-left:40px;
+    margin-right:20px;
   }
   .Boxbig{
   margin-top: 33px;
+   width: 100%;
+   height:461px;
+   box-shadow: 2px 2px var(--bgColor); 
    }
+  
   .Boxbig img {
-    height: 375px;
+    height: 400px;
+    width: 290px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+  }
+  
+  #secondbigphoto{
+    margin-top:29px;
   }
   .rowPhoto {
     flex-direction: column;
     margin-top:18px;
-    margin-right:0px;
+    margin-left:25px;
   }
   .boxSmall {
-    width: 90%;
-    height: auto;   
+    width: 100%;
+    height: auto; 
+    box-shadow: 2px 2px var(--bgColor);  
+    margin-left:10px;
+    margin-right:20px;
   }
   .boxSmall:hover {
     box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
       0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1),
       0 16px 16px rgba(0, 0, 0, 0.1);
+      color:var(--blue)
   }
   .boxSmall img {
     width: 100%;
-    height: 144px;
+    height: 170px;
   }
-  #FortdePomegues{
-    height: 186px; 
-    box-shadow: 2px 5px rgba(204, 204, 204, 0.561); 
+  #FortdePomegues{     
+    box-shadow: 2px 2px rgba(204, 204, 204, 0.561); 
   }
   #FortdePomegues:hover{
     box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
@@ -349,12 +449,11 @@ footer {
     0 16px 16px rgba(0, 0, 0, 0.1);
   }
   #FortdePomegues img{
-      height:150px;
+      height:200px;
   }
    #DuFriout {
-  position: relative;  
-    margin-right: 13px;   
-    top:68px; 
+  position: relative;     
+    top:20px; 
     margin-top:27px
   }
   #DuFriout:hover {
@@ -372,19 +471,29 @@ footer {
  
   #lastSmall{
     position: relative;
-    top:27px;
+    top:29px;
+  }
+  #lastSmall img{
+    height:125px;
+  }
+  .active{
+  border-bottom-color:transparent;
   }
   footer {
     flex-direction: row;
+    padding:20px;
   }
   .card:nth-of-type(2) {
-    margin-left: 150px;
+    margin-left: 250px;
     margin-right: 100px;
   }
   .card:nth-of-type(3) {
     margin-left: 120px;
   }
 }
-
-
+@media (min-width: 992px){ 
+  .chart{
+    margin-left:24% ;
+    }
+  }
 
