--- a/css/style.css
+++ b/css/style.css
@@ -19,47 +19,37 @@ ul,
 li {
   margin: 0;
   padding: 0;
-  text-decoration: none;
-  font-family: "Raleway", sans-serif;
+  text-decoration: none;  
 }
 body {
-  font-size: 16px;
-  font-size: 1rem;
+  font-family: "Raleway", sans-serif;
   height: 100%;
+  overflow-x: hidden;
+    display: block;
 }
 
 li {
   list-style-type: none;
-}
-hr {
-  color: var(--blue);
 }
 
 nav {
   margin-top: 0px;
   padding-top: 20px;
   width: 100%;
-  padding-bottom: 33px;
-}
+  padding-bottom:10px;
+ }
 nav a {
   padding: 11px 24px;
   color: #000;
 }
-nav li a:hover {
-  padding-top: 20px;
-  border-top: 1px solid var(--blue);
-  transition: all 0.4s;
-}
 
 .active {
   color: var(--blue);
+  border-bottom:2px solid var(--blue);
 }
-
-.separation {
-  display: block;
-  width: 80%;
-
-  border: 1px solid #ccc;
+.sincrire{
+  color: var(--blue);
+  font-weight:bold;
 }
 section {
   margin: 20px 10px;
@@ -71,14 +61,17 @@ section {
 
 .descriptionTitle h1 {
   padding-bottom: 10px;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  color:#000;
+}
+.descriptionTitle p {
+  font-size:0.9rem;
 }
 /*Search Input*/
 
 .searchInput {
   display: flex;
-  margin-bottom: 3%;
-  margin: auto 20px;
+  margin-top:20px;
 }
 ::placeholder {
   font-size: 1rem;
@@ -93,7 +86,7 @@ section {
   border-bottom-left-radius: 15px;
 }
 .search {
-  width: 54%;
+  width: 68%;
   height: 51px;
   border: none;
   border-top: 1px solid #f2f2f2;
@@ -104,12 +97,12 @@ section {
   border: none;
   width: 50px;
   height: 51px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-radius: 10px;
   background-color: var(--blue);
   color: white;
   font-size: 15px;
   font-weight: 700;
+  padding:10px;
 }
 
 .btn_recherche:hover {
@@ -133,10 +126,11 @@ section {
   justify-content: flex-start;
   margin: 20px 20px;
 }
-.filterContainer h1 {
+.filterContainer h2 {
   line-height: 3;
   font-size: 1.2rem;
 }
+
 .firtsBtn {
   display: flex;
   flex-direction: row;
@@ -145,6 +139,7 @@ section {
   display: flex;
   width: 172px;
   height: 50px;
+  padding:10px 8px;
   font-size: 15px;
   font-weight: bolder;
   border-radius: 25px;
@@ -163,6 +158,9 @@ section {
   height: 47px;
   padding: 15px 11px;
   margin-right: 0px;
+}
+.libtn h3{
+  font-weight:bolder;
 }
 .liBtn:hover {
   background-color: var(--blue);
@@ -247,36 +245,46 @@ section {
 }
 
 /* Hebergements*/
+#hebergement{
+  margin:20px auto;  
+}
 .hebergementsContainer {
   display: flex;
   justify-content: center;
 }
+.hebergementTitle{
+font-size: 1.4rem;
+padding-left:20px;
+margin-top:20px;
+} 
 
 article {
   width: 100%;
   height: auto;
-  background-color: var(--lightBlue);
-  justify-content: center;
-  padding-bottom: 20px;
+  background-color: var(--bgColor);
+  justify-content: flex-end;
+  padding-right:10px;
+  padding-left:10px;
+ 
 }
 .imageTitle {
-  margin-left: 26px;
+  margin-left: 13px;
   padding-top: 20px;
 }
 .imageTitle h2 {
   font-size: 1.3rem;
 }
 aside {
-  padding-top: 20px;
+  margin-top:10px;
   width: 100%;
-  background-color: var(--lightBlue);
+  background-color: var(--bgColor);
+ 
 }
 .box {
   width: 100%;
   height: auto;
   background-color: #fff;
   border-radius: 15px;
-  margin-bottom: 20px;
   box-shadow: 2px 3px rgba(204, 204, 204, 0.561);
   cursor: pointer;
 }
@@ -284,9 +292,7 @@ aside {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
     0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1),
     0 16px 16px rgba(0, 0, 0, 0.1);
-}
-.parent_box {
-  margin: 20px 20px;
+    color:var(--blue)
 }
 figure {
   background-color: #fff;
@@ -296,6 +302,7 @@ figure {
 figcaption {
   margin-left: 10px;
   line-height: 1.5;
+  margin-top: 10px;
 }
 figcaption h3 {
   font-size: 0.9rem;
@@ -309,35 +316,36 @@ figcaption h3 {
 .popularContainer {
   margin: 0 auto;
   height: auto;
-}
-.popularContainer h2 {
-  font-size: 1.5rem;
-}
-.popularTitle i {
-  margin-left: 20px;
-  font-size: 25px;
+  padding:8px;
 }
 
 .popularTitle {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+
+  font-size: 1.4rem; 
 }
 
 .popularBox {
   box-shadow: 2px 3px rgba(204, 204, 204, 0.561);
-  border-radius: 15px;
+  border-radius: 25px;
+  background-color:#fff;
+  margin:30px 5px;
 }
 .popularBox:hover {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
     0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1),
     0 16px 16px rgba(0, 0, 0, 0.1);
+    color:var(--blue);
 }
 .popularBox figure {
   display: flex;
   flex-direction: row;
   background-color: #fff;
   border-radius: 15px;
+  padding:5px;
+ 
 }
 .popularBox img {
   border-top-left-radius: 15px;
@@ -347,11 +355,16 @@ figcaption h3 {
 .popularBox figcaption {
   line-height: 1.5;
   font-size: 1rem;
+  margin-top: 7px;
+}
+.popularBox figcaption > p{
+ font-size:12px;
 }
 .startBoxPopular {
   display: flex;
   color: var(--blue);
   font-size: 12px;
+  margin-top: 20px;
 }
 .unCheckStart i {
   color: #ccc;
@@ -365,13 +378,15 @@ figcaption h3 {
 /*===activitesContainer==*/
 .activitesContainer {
   display: flex;
-  margin: 20px 20px;
+  margin-left:20px;
 }
 .rowPhoto {
   display: flex;
 }
+.separationDiv{
+  display:flex;
+}
 .Boxbig {
-  max-width: 350px;
   background-color: #fff;
   border-radius: 15px;
   border: 1px solid #ccc;
@@ -383,17 +398,16 @@ figcaption h3 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
     0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1),
     0 16px 16px rgba(0, 0, 0, 0.1);
+    color:var(--blue);
 }
 .Boxbig figure {
   display: flex;
   flex-direction: column;
 }
 .Boxbig h4 {
-  margin-left: 20px;
-  padding-top: 10px;
+ padding: 10px;
 }
 .Boxbig img {
-  max-width: 100%;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -408,8 +422,7 @@ figcaption h3 {
   flex-direction: column;
 }
 .boxSmall h4 {
-  margin-left: 20px;
-  padding-top: 10px;
+  padding: 10px;
 }
 .boxSmall img {
   border-top-left-radius: 15px;
@@ -419,7 +432,8 @@ figcaption h3 {
 /*===Footer ===*/
 footer {
   display: flex;
-  margin: 40px 20px;
+  margin-top: 40px;
+  background-color:var(--bgColor);
 }
 .card {
   padding: 1rem;
