review the template and images size

--- a/css/media.css
+++ b/css/media.css
@@ -354,6 +354,9 @@ footer {
   .hebergementsContainer {
     flex-direction: row;
   }
+  .hebergementTitle{
+  padding-left:20px;
+  }
   article {
     width: 68%;
     border-radius: 25px;
